<resources>
    <string name="app_name">Inventory Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="add_item_name">name</string>
    <string name="add_item_quantity">quantity</string>
    <string name="add_item_add">Add</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_login">Login</string>
    <string name="auth_create_account">Don\'t Have an Account?</string>
    <string name="auth_title_login">Login</string>
    <string name="auth_title_sign_up">Sign Up</string>
    <string name="auth_continue_anon">Continue Anonymously</string>
    <string name="auth_sign_up">Sign Up</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_report">Report</string>
    <string name="_empty" />
</resources>
